[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HMC_unbiased_Helmuth_Naumer"
version = "0.0.1"
authors = [
  { name="Helmuth Naumer", email="hnaumer2@illinois.edu" },
]
description = "Simulations of quadratic ODEs for time series analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "jax>=0.4.3",
    "jaxtyping"
]

[tool.ruff]
ignore = ["F722"]